<resources>
    <string name="app_name">App4</string>
    <string name="valor1">Ingresar valor 1</string>
    <string name="valor2">Ingresar valor 2</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="resultado">Resultado</string>
    <string name="boton">Calcular</string>
</resources>